Examples/fail/malformed-fix.stella
language core;

fn step(n : Nat) -> Bool {
    return Nat::iszero(n);
}

fn main(n : Nat) -> Nat {
  return fix(step);
}
